--- a/demos/time.html
+++ b/demos/time.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="page-header">
         <h1>
-          <a href="/">RTHackPack</a>
+          <a href="../">RTHackPack</a>
           <small>time</small>
         </h1>
       </div>
