--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
       <p class="lead">A collection of demos to get started with on Saturday</p>
 
       <div class="list-group">
+
         <a href="demos/time.html" class="list-group-item">
           <h4 class="list-group-item-heading">Time <span class="label label-primary pull-right">pusher</span></h4>
-          <p class="list-group-item-text">A basic (and useless) demo that displays the server</p>
+          <p class="list-group-item-text">
+            A basic (and useless) demo that displays the server
+          </p>
         </a>
+
+        <a href="demos/openraildata.html" class="list-group-item">
+          <h4 class="list-group-item-heading">Open Rail Data Events <span class="label label-primary pull-right">socket.io</span></h4>
+          <p class="list-group-item-text">
+            Realtime data about the national rail network
+          </p>
+        </a>
+
       </div>
     </div>
 
