plans and readme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         </h1>
       </div>
 
-      <p class="lead">A collection of demos to get started with on Saturday</p>
+      <p class="lead">
+        A collection of demos to get started with on Saturday
+      </p>
 
       <div class="list-group">
 
@@ -32,6 +34,62 @@
             Realtime data about the national rail network
           </p>
         </a>
+
+
+        <a href="#" class="list-group-item">
+          <h4 class="list-group-item-heading">
+            Local tweets
+            <span class="pull-right">
+              <span class="label label-primary">pusher</span>
+              <span class="label label-warning">TODO</span>
+            </span>
+          </h4>
+          <p class="list-group-item-text">
+            Realtime tweets from around the Oxford area
+          </p>
+        </a>
+
+
+        <a href="#" class="list-group-item">
+          <h4 class="list-group-item-heading">
+            @JSOxford Tweets
+            <span class="pull-right">
+              <span class="label label-primary">pusher</span>
+              <span class="label label-warning">TODO</span>
+            </span>
+          </h4>
+          <p class="list-group-item-text">
+            Tweets mentioning @JSOxford
+          </p>
+        </a>
+
+
+        <!--a href="#" class="list-group-item">
+          <h4 class="list-group-item-heading">
+            Chat room
+            <span class="pull-right">
+              <span class="label label-primary">pubnub</span>
+              <span class="label label-warning">TODO</span>
+            </span>
+          </h4>
+          <p class="list-group-item-text">
+            Chat room for having chats in
+          </p>
+        </a>
+
+
+        <a href="#" class="list-group-item">
+          <h4 class="list-group-item-heading">
+            Drawing
+            <span class="pull-right">
+              <span class="label label-primary">firebase</span>
+              <span class="label label-warning">TODO</span>
+            </span>
+          </h4>
+          <p class="list-group-item-text">
+            Collaborative pixel drawings
+          </p>
+        </a-->
 
       </div>
     </div>
