Add some info about the rail data.

--- a/demos/openraildata.html
+++ b/demos/openraildata.html
@@ -23,11 +23,21 @@
       </div>
 
       <p class="lead">
-        [About this data…]
+        This is the data provided by <a href="https://datafeeds.networkrail.co.uk/">Network Rail</a>. They have a vast collection of data available in both real time and static formats. The examples below show some of the types of messages that can be received in real time.
+      </p>
+
+      <p class="lead">
+        <strong>Movement Messages</strong>: messages received when a train passes a timing point location (TIPLOC). Contains information about the schedule, how many minutes variation in timetable and the variation status (on time, early, late) to name a few. <a href="http://www.openraildata.com/index.php/Train_Movements">more info on movement messages</a>.
+      </p>
+
+      <p class="lead">
+        <strong>Describer Messages</strong>: messages containing information about train movements on a finer level (signal to signal) as well as changes of signalling equipment, the states of signals, junctions, points, route setting, all the meaty stuff. Quite difficult to understand and decode though. <a href="http://www.openraildata.com/index.php/TD">more info on describer messages</a>.
+      </p>
+        
         <a href="https://speakerdeck.com/tomlane/open-rail-data-an-overview">slides</a>
         <a href="http://www.openraildata.com/index.php/Main_Page">wiki</a>
         <a href="https://twitter.com/neverontarget">tom</a>
-      </p>
+      
 
       <hr />
 
