added user stream

--- a/index.html
+++ b/index.html
@@ -50,16 +50,15 @@
         </a>
 
 
-        <a href="#" class="list-group-item">
+        <a href="demos/twitter-user.html" class="list-group-item">
           <h4 class="list-group-item-heading">
             @JSOxford Tweets
             <span class="pull-right">
               <span class="label label-primary">pusher</span>
-              <span class="label label-warning">TODO</span>
             </span>
           </h4>
           <p class="list-group-item-text">
-            Tweets mentioning @JSOxford
+            User stream for @JSOxford
           </p>
         </a>
 
