--- a/index.html
+++ b/index.html
@@ -22,30 +22,39 @@
       <div class="list-group">
 
         <a href="demos/time.html" class="list-group-item">
-          <h4 class="list-group-item-heading">Time <span class="label label-primary pull-right">pusher</span></h4>
+          <h4 class="list-group-item-heading">
+            Time
+            <span class="pull-right">
+              <span class="label label-primary">pusher</span>
+            </span>
+          </h4>
           <p class="list-group-item-text">
             A basic (and useless) demo that displays the server
           </p>
         </a>
 
         <a href="demos/openraildata.html" class="list-group-item">
-          <h4 class="list-group-item-heading">Open Rail Data Events <span class="label label-primary pull-right">socket.io</span></h4>
+          <h4 class="list-group-item-heading">
+            Open Rail Data Events
+            <span class="pull-right">
+              <span class="label label-primary">socket.io</span>
+            </span>
+          </h4>
           <p class="list-group-item-text">
             Realtime data about the national rail network
           </p>
         </a>
 
 
-        <a href="#" class="list-group-item">
+        <a href="demos/twitter-geo.html" class="list-group-item">
           <h4 class="list-group-item-heading">
             Local tweets
             <span class="pull-right">
               <span class="label label-primary">pusher</span>
-              <span class="label label-warning">TODO</span>
             </span>
           </h4>
           <p class="list-group-item-text">
-            Realtime tweets from around the Oxford area
+            Geotagged tweets from around the Oxford area
           </p>
         </a>
 
