Adding PubNub chat client demo

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
           </p>
         </a>
 
+        <a href="demos/chat.html" class="list-group-item">
+          <h4 class="list-group-item-heading">
+            Simple chat
+            <span class="pull-right">
+              <span class="label label-primary">PubNub</span>
+            </span>
+          </h4>
+          <p class="list-group-item-text">
+            Send and receive messages in pure 90's style.
+          </p>
+        </a>
+
 
         <a href="demos/twitter-user.html" class="list-group-item">
           <h4 class="list-group-item-heading">
