--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
           </p>
         </a>
 
+        <a href="demos/webrtc-video.html" class="list-group-item">
+          <h4 class="list-group-item-heading">
+            WebRTC video chat
+            <span class="pull-right">
+              <span class="label label-primary">peerJS</span>
+            </span>
+          </h4>
+          <p class="list-group-item-text">
+            See each other with PeerJS and WebRTC.
+          </p>
+        </a>
 
         <!--a href="#" class="list-group-item">
           <h4 class="list-group-item-heading">
