Added demo page for GitHub events

--- a/index.html
+++ b/index.html
@@ -95,6 +95,18 @@
           </p>
         </a>
 
+        <a href="demos/github-events.html" class="list-group-item">
+          <h4 class="list-group-item-heading">
+            GitHub Events
+            <span class="pull-right">
+              <span class="label label-primary">pusher</span>
+            </span>
+          </h4>
+          <p class="list-group-item-text">
+            See GitHub events from the JSOxford organisation
+          </p>
+        </a>
+
         <!--a href="#" class="list-group-item">
           <h4 class="list-group-item-heading">
             Chat room
