--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
           </p>
         </a>
 
+        <a href="demos/temp.html" class="list-group-item">
+          <h4 class="list-group-item-heading">
+            RTHack temperature
+            <span class="pull-right">
+              <span class="label label-primary">pusher</span>
+            </span>
+          </h4>
+          <p class="list-group-item-text">
+            See the temperature and humidity at #RTHack
+          </p>
+        </a>
+
         <!--a href="#" class="list-group-item">
           <h4 class="list-group-item-heading">
             Chat room
