--- a/demos/temp.html
+++ b/demos/temp.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RTHackPack</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <style>
+      path { 
+          stroke: steelblue;
+          stroke-width: 2;
+          fill: none;
+      }
+
+      .axis path,
+      .axis line {
+          fill: none;
+          stroke: grey;
+          stroke-width: 1;
+          shape-rendering: crispEdges;
+      }
+
+    </style>
   </head>
   <body>
     <div class="container">
@@ -33,17 +49,28 @@
         <code id="all" class="pre"></code>
       </div>
 
+      <div class="well">
+        <div id="graph"></div>
+      </div>
+
     </div>
 
-
+    <!-- load the d3.js library -->
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.1/moment.min.js"></script>
     <script src="https://js.pusher.com/2.2/pusher.min.js"></script>
     <script type="text/javascript">
       var pusher = new Pusher('e90170eabd1af4f8e8fc');
-
       var channel = pusher.subscribe('temp');
+
+      var tempData = [];    
 
       channel.bind('temp', function(data) {
         temp.textContent = JSON.stringify(data, null, 2);
+        if(data.temperature){
+          tempData.push(data);
+          updateData();
+        }
       });
       channel.bind('humidity', function(data) {
         humidity.textContent = JSON.stringify(data, null, 2);
@@ -51,6 +78,92 @@
       channel.bind('all', function(data) {
         all.textContent = JSON.stringify(data, null, 2);
       });
+
+
+      ///
+      /// The folowing is mostly copied from: http://bl.ocks.org/d3noob/7030f35b72de721622b8
+      ///
+      
+      // Set the dimensions of the canvas / graph
+      var margin = {top: 30, right: 20, bottom: 30, left: 50},
+          width = 600 - margin.left - margin.right,
+          height = 270 - margin.top - margin.bottom;
+
+      // Set the ranges
+      var x = d3.time.scale().range([0, width]);
+      var y = d3.scale.linear().range([height, 0]);
+
+      // Define the axes
+      var xAxis = d3.svg.axis().scale(x)
+          .orient("bottom").ticks(5);
+
+      var yAxis = d3.svg.axis().scale(y)
+          .orient("left").ticks(5);
+
+      // Define the line
+      var valueline = d3.svg.line()
+          .x(function(d) { return x(d.timestamp); })
+          .y(function(d) { return y(d.temperature); });
+          
+      // Adds the svg canvas
+      var svg = d3.select("#graph")
+          .append("svg")
+              .attr("width", width + margin.left + margin.right)
+              .attr("height", height + margin.top + margin.bottom)
+          .append("g")
+              .attr("transform", 
+                    "translate(" + margin.left + "," + margin.top + ")");
+          // Scale the range of the data
+          x.domain(d3.extent(tempData, function(d) { return d.timestamp; }));
+          y.domain([0, d3.max(tempData, function(d) { return d.temperature; })]);
+
+          // Add the valueline path.
+          svg.append("path")
+              .attr("class", "line")
+              .attr("d", valueline(tempData));
+
+          // Add the X Axis
+          svg.append("g")
+              .attr("class", "x axis")
+              .attr("transform", "translate(0," + height + ")")
+              .call(xAxis);
+
+          // Add the Y Axis
+          svg.append("g")
+              .attr("class", "y axis")
+              .call(yAxis);
+
+
+      // ** Update data section (Called from the onclick)
+      function updateData() {
+        tempData.forEach(function(d) {
+              d.timestamp = new Date(d.timestamp);
+              d.temperature = +d.temperature;
+            });
+
+            // Scale the range of the data again 
+            x.domain(d3.extent(tempData, function(d) { return d.timestamp; }));
+            y.domain([0, d3.max(tempData, function(d) { return d.temperature; })]);
+
+          // Select the section we want to apply our changes to
+          var svg = d3.select("#graph").transition();
+
+          // Make the changes
+              svg.select(".line")   // change the line
+                  .duration(750)
+                  .attr("d", valueline(tempData));
+              svg.select(".x.axis") // change the x axis
+                  .duration(750)
+                  .call(xAxis);
+              svg.select(".y.axis") // change the y axis
+                  .duration(750)
+                  .call(yAxis);
+
+      }
+
+
+
+
     </script>
 
   </body>
